cabal-version:      >= 1.10
name:               blog
version:            0.1.0.0
description:
    Please see the README on Github at
    <https://github.com/kimminss0/minseo-kim.net#readme>.

license:            MIT
license-file:       LICENSE
author:             Minseo Kim

build-type:         Simple
extra-doc-files:    README.md

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , pandoc >= 3.1
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
