cabal-version:      >= 1.10
name:               blog
version:            0.1.0.0
-- description:

homepage:           https://github.com/kimminss0/minseo-kim.net#readme
license:            MIT
license-file:       LICENSE
author:             Minseo Kim
copyright:          2024 Minseo Kim
build-type:         Simple
extra-doc-files:    README.md

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
                  , hakyll >= 4.16 && < 5
                  , pandoc
                  , filepath
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
